fix: detector pipeline & MIMO count bug, prep for entropy-based scoring